# ml2_Q5

./: Q5.py  README_Q5.md  model.py  pyproject.toml  readme.md  requirements.txt  testing.py  train_launcher.py
code/: Q5.py
