[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "style-detection"
version = "0.1.0"
requires-python = ">=3.8,<3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "pandas",
    "tqdm",
    "scikit-learn",
    "einops",
    "PyYAML",
    "matplotlib",
]
